@@ -30,6 +30,7 @@ int main(int argc, char** argv)
     << get_defs(CLUTTER_TYPE_ACTION)
     << get_defs(CLUTTER_TYPE_ALPHA)
     << get_defs(CLUTTER_TYPE_ANIMATION)
+    << get_defs(CLUTTER_TYPE_ANIMATOR)
     << get_defs(CLUTTER_TYPE_BACKEND)
     << get_defs(CLUTTER_TYPE_BEHAVIOUR_DEPTH)
     << get_defs(CLUTTER_TYPE_BEHAVIOUR_ELLIPSE)
